--- a/language/sample.lng
+++ b/language/sample.lng
@@ -1,13 +1,21 @@
-Bem vindo ao PhanterPS2: Bem vindo ao PhanterPS2
-Adicionar novos jogos iso: Adicionar novos jogos iso
-Selecionar imagens iso dos jogos: Selecionar imagens iso dos jogos
-Salvar: Salvar
-Salvar as configurações: Salvar as configurações
-Configurações: Configurações
-Configurar o PhanterPS2: Configurar o PhanterPS2
-Sobre: Sobre
-Sobre o programa e autor: Sobre o programa e autor
-A&dicionar novo(s) iso(s)	Ctrl+A: A&dicionar novo(s) iso(s)	Ctrl+A
-Salvar configurações: Salvar configurações
-&Arquivo: &Arquivo
-Ajuda: Ajuda
+Bem vindo ao PhanterPS2 = Bem vindo ao PhanterPS2
+Adicionar novos jogos iso = Adicionar novos jogos iso
+Selecionar imagens iso dos jogos = Selecionar imagens iso dos jogos
+Salvar = Salvar
+Salvar as configurações = Salvar as configurações
+Configurações = Configurações
+Configurar o PhanterPS2 = Configurar o PhanterPS2
+Sobre = Sobre
+Sobre o programa e autor = Sobre o programa e autor
+A&dicionar novo(s) iso(s)	Ctrl+A = A&dicionar novo(s) iso(s)	Ctrl+A
+Salvar configurações = Salvar configurações
+&Arquivo = &Arquivo
+&Sobre	F1 = &Sobre	F1
+Sobre o PhanterPS2 = Sobre o PhanterPS2
+Ajuda = Ajuda
+Clique na imagem para mudá-la = Clique na imagem para mudá-la
+Código: = Código:
+Nome: = Nome:
+Arquivo: = Arquivo:
+Tamanho: = Tamanho:
+Selecionar = Selecionar
