--- a/language/sample.lng
+++ b/language/sample.lng
@@ -19,3 +19,8 @@ Nome: = Nome:
 Arquivo: = Arquivo:
 Tamanho: = Tamanho:
 Selecionar = Selecionar
+Pasta dos jogos = Pasta dos jogos
+Arquivos de Tradução = Arquivos de Tradução
+Selecionando Imagem... = Selecionando Imagem...
+Pasta de jogos = Pasta de jogos
+Selecionando pasta de jogos... = Selecionando pasta de jogos...
