--- a/language/sample.lng
+++ b/language/sample.lng
@@ -24,3 +24,6 @@ Arquivos de Tradução = Arquivos de Tradução
 Selecionando Imagem... = Selecionando Imagem...
 Pasta de jogos = Pasta de jogos
 Selecionando pasta de jogos... = Selecionando pasta de jogos...
+Lista de Jogos - Playstation 2 = Lista de Jogos - Playstation 2
+Total de jogos = Total de jogos
+Tamanho total = Tamanho total
