--- a/language/sample.lng
+++ b/language/sample.lng
@@ -1,29 +1,56 @@
 Bem vindo ao PhanterPS2 = Bem vindo ao PhanterPS2
 Adicionar novos jogos iso = Adicionar novos jogos iso
-Selecionar imagens iso dos jogos = Selecionar imagens iso dos jogos
-Salvar = Salvar
-Salvar as configurações = Salvar as configurações
+Selecionar imagens iso para adicionar a lista de jogos = Selecionar imagens iso para adicionar a lista de jogos
+Atualizar = Atualizar
+Atualizar lista de jogos = Atualizar lista de jogos
 Configurações = Configurações
 Configurar o PhanterPS2 = Configurar o PhanterPS2
 Sobre = Sobre
 Sobre o programa e autor = Sobre o programa e autor
 A&dicionar novo(s) iso(s)	Ctrl+A = A&dicionar novo(s) iso(s)	Ctrl+A
-Salvar configurações = Salvar configurações
+A&tualizar = A&tualizar
 &Arquivo = &Arquivo
 &Sobre	F1 = &Sobre	F1
 Sobre o PhanterPS2 = Sobre o PhanterPS2
 Ajuda = Ajuda
+Lista de Jogos - Playstation 2 = Lista de Jogos - Playstation 2
 Clique na imagem para mudá-la = Clique na imagem para mudá-la
 Código: = Código:
 Nome: = Nome:
 Arquivo: = Arquivo:
 Tamanho: = Tamanho:
 Selecionar = Selecionar
-Pasta dos jogos = Pasta dos jogos
-Arquivos de Tradução = Arquivos de Tradução
-Selecionando Imagem... = Selecionando Imagem...
-Pasta de jogos = Pasta de jogos
-Selecionando pasta de jogos... = Selecionando pasta de jogos...
-Lista de Jogos - Playstation 2 = Lista de Jogos - Playstation 2
+Renomear = Renomear
+Deletar = Deletar
+Copiar para... = Copiar para...
 Total de jogos = Total de jogos
 Tamanho total = Tamanho total
+Jogos Selecionados - Ação = Jogos Selecionados - Ação
+Tamanho Total = Tamanho Total
+Selecionando Imagem... = Selecionando Imagem...
+Adicione o nome e código do jogo = Adicione o nome e código do jogo
+OBSERVAÇÃO: Caso coloque um nome já usado o programa se encarregará de por um nome válido, Ex.:XXX_000.00.NOME_DO_ARQUIVO - 01 = OBSERVAÇÃO: Caso coloque um nome já usado o programa se encarregará de por um nome válido, Ex.:XXX_000.00.NOME_DO_ARQUIVO - 01
+OBSERVAÇÃO: Já existe uma jogo com esse mesmo código localizado em = OBSERVAÇÃO: Já existe uma jogo com esse mesmo código localizado em
+de nome = de nome
+e tamanho = e tamanho
+A checagem do arquivo ISO ocorreu sem problemas. O código sugerido acima foi encontrado em seu interior. = A checagem do arquivo ISO ocorreu sem problemas. O código sugerido acima foi encontrado em seu interior.
+Código do jogo = Código do jogo
+Nome do jogo = Nome do jogo
+Tamanho do jogo = Tamanho do jogo
+Mídia = Mídia
+CANCELAR = CANCELAR
+Adicionando  = Adicionando 
+Deletando jogo = Deletando jogo
+Destino = Destino
+Copiar no padrão ul.cfg = Copiar no padrão ul.cfg
+Converter ao padrão ISO = Converter ao padrão ISO
+Escolha como quer o método de cópia. = Escolha como quer o método de cópia.
+Selecionando pasta destino... = Selecionando pasta destino...
+Escolha qual método de cópia. = Escolha qual método de cópia.
+Atenção! = Atenção!
+Escolhar um dispositivo ou pasta como destino da cópia. = Escolhar um dispositivo ou pasta como destino da cópia.
+Copiando = Copiando
+Converter ao padrão ul.cfg = Converter ao padrão ul.cfg
+Copiar no padrão ISO = Copiar no padrão ISO
+O nome do arquivo foi alterado com sucesso! = O nome do arquivo foi alterado com sucesso!
+Sucesso! = Sucesso!
