--- a/language/sample.lng
+++ b/language/sample.lng
@@ -23,34 +23,148 @@ Selecionar = Selecionar
 Renomear = Renomear
 Deletar = Deletar
 Copiar para... = Copiar para...
+INFORMAÇÕES GERAIS = INFORMAÇÕES GERAIS
 Total de jogos = Total de jogos
 Tamanho total = Tamanho total
-Jogos Selecionados - Ação = Jogos Selecionados - Ação
+INFORMAÇÕES E AÇÕES DOS SELECIONADOS = INFORMAÇÕES E AÇÕES DOS SELECIONADOS
 Tamanho Total = Tamanho Total
+Destino = Destino
+Copiar no padrão ul.cfg = Copiar no padrão ul.cfg
+Converter ao padrão ISO = Converter ao padrão ISO
+Escolha qual método de cópia. = Escolha qual método de cópia.
+Escolhar um dispositivo ou pasta como destino da cópia. = Escolhar um dispositivo ou pasta como destino da cópia.
+Atenção! = Atenção!
+Pasta de jogos = Pasta de jogos
+Arquivos de Tradução = Arquivos de Tradução
+Pasta de DVD = Pasta de DVD
+Pasta de CD = Pasta de CD
+Pasta de capas = Pasta de capas
+Pasta de configurações = Pasta de configurações
+Selecionando pasta de jogos... = Selecionando pasta de jogos...
+Converter ao padrão ul.cfg = Converter ao padrão ul.cfg
+Copiar no padrão ISO = Copiar no padrão ISO
+Selecionando pasta destino... = Selecionando pasta destino...
+Copiando = Copiando
+Selecionando arquivo de tradução = Selecionando arquivo de tradução
+Imagem ISO = Imagem ISO
+Imagem jpg = Imagem jpg
+Imagem png = Imagem png
 Selecionando Imagem... = Selecionando Imagem...
+Copiando multiplos jogos = Copiando multiplos jogos
+Status: = Status:
+Adicionar novo jogo ISO = Adicionar novo jogo ISO
+Selecionar imagens ISO para adicionar a lista de jogos = Selecionar imagens ISO para adicionar a lista de jogos
+Adicionar múltiplos jogos ISO = Adicionar múltiplos jogos ISO
+Selecionar vários ISOs para adicionar a lista de jogos = Selecionar vários ISOs para adicionar a lista de jogos
+A&dicionar novo ISO	Ctrl+A = A&dicionar novo ISO	Ctrl+A
+A&dicionar múltiplos jogos ISO = A&dicionar múltiplos jogos ISO
+A&dicionar múltiplos jogos ISO	Ctrl+M = A&dicionar múltiplos jogos ISO	Ctrl+M
+Selecionando Imagens... = Selecionando Imagens...
+Deletando jogo = Deletando jogo
+O nome do arquivo foi alterado com sucesso! = O nome do arquivo foi alterado com sucesso!
+Sucesso! = Sucesso!
+Mídia: = Mídia:
+Partes: = Partes:
 Adicione o nome e código do jogo = Adicione o nome e código do jogo
 OBSERVAÇÃO: Caso coloque um nome já usado o programa se encarregará de por um nome válido, Ex.:XXX_000.00.NOME_DO_ARQUIVO - 01 = OBSERVAÇÃO: Caso coloque um nome já usado o programa se encarregará de por um nome válido, Ex.:XXX_000.00.NOME_DO_ARQUIVO - 01
-OBSERVAÇÃO: Já existe uma jogo com esse mesmo código localizado em = OBSERVAÇÃO: Já existe uma jogo com esse mesmo código localizado em
-de nome = de nome
-e tamanho = e tamanho
-A checagem do arquivo ISO ocorreu sem problemas. O código sugerido acima foi encontrado em seu interior. = A checagem do arquivo ISO ocorreu sem problemas. O código sugerido acima foi encontrado em seu interior.
+ATENÇÃO: O arquivo ISO selecionado não passou na checagem. Ao abrir o arquivo não foi encontrado o arquivo código característicos dos jogos de PS2. Isso pode ocorrer em jogos que possui alguma proteção. = ATENÇÃO: O arquivo ISO selecionado não passou na checagem. Ao abrir o arquivo não foi encontrado o arquivo código característicos dos jogos de PS2. Isso pode ocorrer em jogos que possui alguma proteção.
 Código do jogo = Código do jogo
 Nome do jogo = Nome do jogo
 Tamanho do jogo = Tamanho do jogo
 Mídia = Mídia
 CANCELAR = CANCELAR
+OBSERVAÇÃO: Já existe uma jogo com esse mesmo código localizado em = OBSERVAÇÃO: Já existe uma jogo com esse mesmo código localizado em
+de nome = de nome
+e tamanho = e tamanho
+O arquivo ISO selecionado não passou no teste,  = O arquivo ISO selecionado não passou no teste, 
+Ao abrir o arquivo não foi encontrado o arquivo código característicos dos jogos de PS2. Porém no nome do ISO selecionado apresenta um código válido. = Ao abrir o arquivo não foi encontrado o arquivo código característicos dos jogos de PS2. Porém no nome do ISO selecionado apresenta um código válido.
+A checagem do arquivo ISO ocorreu sem problemas. O código sugerido acima foi encontrado em seu interior. = A checagem do arquivo ISO ocorreu sem problemas. O código sugerido acima foi encontrado em seu interior.
+Padrão = Padrão
 Adicionando  = Adicionando 
-Deletando jogo = Deletando jogo
-Destino = Destino
-Copiar no padrão ul.cfg = Copiar no padrão ul.cfg
-Converter ao padrão ISO = Converter ao padrão ISO
-Escolha como quer o método de cópia. = Escolha como quer o método de cópia.
-Selecionando pasta destino... = Selecionando pasta destino...
-Escolha qual método de cópia. = Escolha qual método de cópia.
-Atenção! = Atenção!
-Escolhar um dispositivo ou pasta como destino da cópia. = Escolhar um dispositivo ou pasta como destino da cópia.
-Copiando = Copiando
-Converter ao padrão ul.cfg = Converter ao padrão ul.cfg
-Copiar no padrão ISO = Copiar no padrão ISO
-O nome do arquivo foi alterado com sucesso! = O nome do arquivo foi alterado com sucesso!
-Sucesso! = Sucesso!
+Padrão de cópia. = Padrão de cópia.
+Copiar imagem de capa = Copiar imagem de capa
+Copiar arquivo cfg = Copiar arquivo cfg
+Criar genericVMC vazio = Criar genericVMC vazio
+Implicará na edição do arquivo cfg do jogo = Implicará na edição do arquivo cfg do jogo
+Configuração = Configuração
+Configuração do Jogo = Configuração do Jogo
+Informações do jogo = Informações do jogo
+Descrição = Descrição
+Sistema de imagem = Sistema de imagem
+Numero de jogadores = Numero de jogadores
+Configuração de compatibilidade = Configuração de compatibilidade
+Modo 1 = Modo 1
+Modo 2 = Modo 2
+Modo 3 = Modo 3
+Modo 4 = Modo 4
+Modo 5 = Modo 5
+Modo 6 = Modo 6
+Modo 7 = Modo 7
+Modo 8 = Modo 8
+Configuração do VMC = Configuração do VMC
+Virtual Memory Card 1 = Virtual Memory Card 1
+Virtual Memory Card 2 = Virtual Memory Card 2
+Compatibilidade = Compatibilidade
+Gênero = Gênero
+rating = rating
+Release = Release
+Scan = Scan
+Esrb = Esrb
+Aspect = Aspect
+Developer = Developer
+INFORMAÇÕES DO JOGO = INFORMAÇÕES DO JOGO
+Configurações de compatibilidade = Configurações de compatibilidade
+callbacktimer = callbacktimer
+AltStartup = AltStartup
+dnas = dnas
+Avaliação = Avaliação
+Lançamento = Lançamento
+Tamanho da tela = Tamanho da tela
+Classificação = Classificação
+Formato da tela = Formato da tela
+Desenvolvedor = Desenvolvedor
+Callbacktimer = Callbacktimer
+Arquivo de arranque = Arquivo de arranque
+ID DNA = ID DNA
+Ex. Corrida, Luta, Aventura, FPS, etc. = Ex. Corrida, Luta, Aventura, FPS, etc.
+Quantidade de jogaores máximos no jogo = Quantidade de jogaores máximos no jogo
+Ex. Corrida, Luta, Aventura, = Ex. Corrida, Luta, Aventura,
+Ler core alternativo = Ler core alternativo
+Método alternativo de leitura de dados = Método alternativo de leitura de dados
+Desprender chamadas do sistema = Desprender chamadas do sistema
+Modo PPS 0 = Modo PPS 0
+Desabilitar DVD-DL = Desabilitar DVD-DL
+Desabilitar IGR = Desabilitar IGR
+Usar hack IOP threading = Usar hack IOP threading
+Esconder módulo dev9 = Esconder módulo dev9
+Quantidade de jogadores máximos no jogo = Quantidade de jogadores máximos no jogo
+Lista dos dispositivos que o jogo funcionou Ex. REDE, USB, HD = Lista dos dispositivos que o jogo funcionou Ex. REDE, USB, HD
+Valor de 1 a 5 = Valor de 1 a 5
+Ano de lançamento do jogo = Ano de lançamento do jogo
+Dimensões da largura = Dimensões da largura
+Classificação indicativa Ex. Criança, Adulto = Classificação indicativa Ex. Criança, Adulto
+Compatibilidade com telas Widescreen = Compatibilidade com telas Widescreen
+Desenvolvedor do jogo = Desenvolvedor do jogo
+Callback timer = Callback timer
+Aplicar um atraso para as funções CDVD = Aplicar um atraso para as funções CDVD
+Apontar o arquivo ELF que iniciar o jogo = Apontar o arquivo ELF que iniciar o jogo
+ID para jogar pela internet = ID para jogar pela internet
+Renomear nome do jogo = Renomear nome do jogo
+Deletar jogo = Deletar jogo
+Abrir configuração específica do jogo = Abrir configuração específica do jogo
+Fazer uma cópia do jogo num dispositivo ou pasta diferente = Fazer uma cópia do jogo num dispositivo ou pasta diferente
+O jogo passou, desmarque se quer desistir de copiar = O jogo passou, desmarque se quer desistir de copiar
+Digite um nome para o jogo = Digite um nome para o jogo
+Apontar o arquivo ELF que inicia o jogo = Apontar o arquivo ELF que inicia o jogo
+Selecionar este jogo = Selecionar este jogo
+Código do jogo, em caso de falha, coloque o código manualmente = Código do jogo, em caso de falha, coloque o código manualmente
+Adicionar nome do jogo = Adicionar nome do jogo
+Mídia detectada por tamanho, caso deseje escolha outro = Mídia detectada por tamanho, caso deseje escolha outro
+ul.cfg divide em partes, ISO copia inteiro = ul.cfg divide em partes, ISO copia inteiro
+Selecione uma pasta padrão para ser armazenado os jogos de PS2 = Selecione uma pasta padrão para ser armazenado os jogos de PS2
+Escolha um arquivo de tradução, para pt-BR deixe vazio = Escolha um arquivo de tradução, para pt-BR deixe vazio
+Escolha um drive ou pasta destino para o jogo = Escolha um drive ou pasta destino para o jogo
+Uma imagem foi localizada, se marcado será adicionado = Uma imagem foi localizada, se marcado será adicionado
+Adicionar um Virtual Memory Card vazio ao destino = Adicionar um Virtual Memory Card vazio ao destino
+Uma imagem foi localizada, se marcado será adicionada = Uma imagem foi localizada, se marcado será adicionada
+Uma arquivo cfg foi localizado, se marcado será adicionado = Uma arquivo cfg foi localizado, se marcado será adicionado
